# Agentic_AI_Travel_Planner

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  Dockerfile  QUICK_SETUP.md  RAPIDAPI_SETUP.md  README.md  diagnose_rapidapi.py  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt  test_rapidapi.py  travel_planner.db  verify_setup.py
app/: __init__.py  main.py
app/agents/: base.py  budget_agent.py  flight_agent.py  hotel_agent.py  planner_agent.py
app/api/v1/: router.py
app/api/v1/endpoints/: booking.py  status.py  travel.py
app/core/: config.py  database.py  logging_config.py
app/models/: booking.py  travel_plan.py  user.py
app/schemas/: travel.py
app/services/: __init__.py  base_client.py  booking_service.py  flight_clients.py  hotel_clients.py  rapidapi_client.py  status_service.py  travel_service.py
tests/: conftest.py  test_booking_endpoints.py  test_status_endpoints.py  test_travel_endpoints.py
